--- a/Index.html
+++ b/Index.html
@@ -13,6 +13,8 @@
 <h1>My first heading </h1>
 
 <p>My first paragrah. </p>
+  
+  <img src="IMG_0747.jpg" alt="Mia Chou" width="500" height="600">
 
 </body>
 
